--- a/Source/Outfitter/Outfitter.csproj
+++ b/Source/Outfitter/Outfitter.csproj
@@ -11,8 +11,7 @@
     <AssemblyName>Outfitter</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <RimWorldDataDirectory Condition=" '$(RimWorldDataDirectory)'=='' AND '$(OS)' == 'Unix' ">$(HOME)/.steam/steam/steamapps/common/RimWorld/RimWorldLinux_Data</RimWorldDataDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>false</DebugSymbols>
@@ -46,12 +45,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\RimWorldWin_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>$(RimWorldDataDirectory)\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\RimWorldWin_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>$(RimWorldDataDirectory)\Managed\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
